--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>barbearia ana</title>
+    <style>
+p{
+    
+}
+    </style>
 </head>
 <body>
     <h1 style="text-align: center">Sobre a Barbearia Alura</h1>
