--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>barbearia ana</title>
-    <style>
-p{
-    
-}
-    </style>
+    <link rel="stylesheet" href="style.css"
+
+    <style> 
+
+   </style>
 </head>
+
 <body>
     <h1 style="text-align: center">Sobre a Barbearia Alura</h1>
 
