--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+ <head>
     <meta charset="UTF-8">
     <title>barbearia ana</title>
     <link rel="stylesheet" href="style.css"
-
-    <style> 
-
-   </style>
 </head>
 
 <body>
+    <img src="banner.jpg">
+    
     <h1 style="text-align: center; background:" >Sobre a Barbearia Alura</h1>
 
     <p style="text-align: center">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
